--- a/src/components/CardProduct/style.css
+++ b/src/components/CardProduct/style.css
@@ -6,6 +6,7 @@
     padding: 1rem;
     opacity: 1;
     filter: alpha(opacity=50);
+    text-align: center;
   }
 
 .container_product:hover {
@@ -13,9 +14,8 @@
     filter: alpha(opacity=100);
 }
 
-.container_img_text {
-    position: relative;
-    text-align: center;
+.container_text {
+    color: #DC0D0D;
     font-family: 'Bungee Inline', cursive;
 }
 
@@ -26,3 +26,7 @@
     transform: translate(-50%, -50%);
 }
 
+.link {
+    text-decoration: none;
+    color: black;
+}
