--- a/src/components/CardProduct/style.css
+++ b/src/components/CardProduct/style.css
@@ -4,19 +4,14 @@
     flex-flow: column nowrap;
     align-items: center;
     padding: 1rem;
-    opacity: 1;
-    filter: alpha(opacity=50);
     text-align: center;
   }
 
-.container_product:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100);
-}
-
-.container_text {
+.discount_text_red {
+    margin: 0rem;
     color: #DC0D0D;
     font-family: 'Bungee Inline', cursive;
+    text-decoration: line-through;
 }
 
 .centered {
