--- a/src/components/CardProductContainer/style.css
+++ b/src/components/CardProductContainer/style.css
@@ -1,5 +1,13 @@
 .container {
     display: flex;
     flex-flow: row wrap;  
-    justify-content: space-around;
+    justify-content: center;
+    align-items: start;
   }
+
+  .container_ {
+    display: flex;
+    flex-flow: row wrap;  
+    justify-content: center;
+    align-items: center;
+  } 
